--- a/Index.html
+++ b/Index.html
@@ -9,43 +9,82 @@
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
+    :root {
+      --dark-purple: #2e003e;
+      --light-purple: #7209b7;
+      --text-light: #f1f1f1;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
+      background-color: var(--dark-purple);
+      color: var(--text-light);
     }
+
+    .navbar {
+      background-color: #1d002d;
+    }
+
+    .navbar-brand,
+    .navbar-nav .nav-link {
+      color: #ffffff !important;
+    }
+
     .hero {
-      background: url('https://images.unsplash.com/photo-1526178612022-202d60c020a0?auto=format&fit=crop&w=1950&q=80') no-repeat center center;
+      background: linear-gradient(to right, rgba(46, 0, 62, 0.8), rgba(114, 9, 183, 0.8)),
+        url('https://images.unsplash.com/photo-1526178612022-202d60c020a0?auto=format&fit=crop&w=1950&q=80') no-repeat center center;
       background-size: cover;
       color: white;
       text-align: center;
       padding: 120px 20px;
     }
+
     .hero h1 {
       font-size: 3rem;
       font-weight: bold;
     }
+
+    .section-bg-light {
+      background-color: #3d0d55;
+    }
+
     .social-icons a {
       font-size: 24px;
       margin: 0 10px;
     }
+
     .fa-facebook { color: #3b5998; }
     .fa-instagram { color: #e1306c; }
     .fa-twitter { color: #1da1f2; }
     .fa-youtube { color: #ff0000; }
+
     footer {
-      background-color: #000;
+      background-color: #1d002d;
       color: white;
       padding: 20px 0;
+    }
+
+    a {
+      color: #ffccff;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    iframe {
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+  <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container">
       <a class="navbar-brand" href="#"><i class="fa-solid fa-music"></i> Truth Productions</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon bg-light"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
@@ -66,7 +105,7 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="py-5">
+  <section id="about" class="py-5 section-bg-light">
     <div class="container text-center">
       <h2>About Us</h2>
       <p class="lead">
@@ -76,12 +115,12 @@
   </section>
 
   <!-- Services -->
-  <section id="services" class="py-5 bg-light">
+  <section id="services" class="py-5">
     <div class="container">
       <h2 class="text-center mb-4">Our Services</h2>
       <div class="row text-center">
         <div class="col-md-6 mb-4">
-          <i class="fa-solid fa-headphones fa-3x mb-3 text-primary"></i>
+          <i class="fa-solid fa-headphones fa-3x mb-3 text-info"></i>
           <h4>Music Production</h4>
           <p>Professional studio recording, mixing, mastering, and beat production.</p>
         </div>
@@ -95,7 +134,7 @@
   </section>
 
   <!-- Portfolio -->
-  <section id="portfolio" class="py-5">
+  <section id="portfolio" class="py-5 section-bg-light">
     <div class="container">
       <h2 class="text-center mb-4">Our Work</h2>
       <div class="row">
@@ -114,12 +153,12 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="py-5 bg-light">
+  <section id="contact" class="py-5">
     <div class="container">
       <h2 class="text-center mb-4">Get in Touch</h2>
       <div class="row">
         <div class="col-md-6 mb-4">
-          <iframe src="https://maps.google.com/maps?q=kampala&t=&z=13&ie=UTF8&iwloc=&output=embed" class="w-100" height="300" frameborder="0" style="border:0;" allowfullscreen></iframe>
+          <iframe src="https://maps.google.com/maps?q=kampala&t=&z=13&ie=UTF8&iwloc=&output=embed" class="w-100" height="300" allowfullscreen></iframe>
         </div>
         <div class="col-md-6">
           <p><i class="fa fa-envelope text-primary me-2"></i> Email: <a href="mailto:truthproductions@gmail.com">truthproductions@gmail.com</a></p>
